Refactor: UserServiceImpl