@@ -3,6 +3,7 @@ package com.dcm.backend.services.impl;
 import com.dcm.backend.dto.UserDTO;
 import com.dcm.backend.exceptions.UserNotFoundException;
 import com.dcm.backend.services.UserService;
+import com.dcm.backend.utils.mappers.UserMapper;
 import ma.gov.mes.framework.keycloak.KeycloakProperties;
 import org.keycloak.admin.client.Keycloak;
 import org.keycloak.representations.idm.CredentialRepresentation;
@@ -14,16 +15,18 @@ import org.springframework.stereotype.Service;
 import java.util.Collection;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 @Service
 public class UserServiceImpl implements UserService {
 
     @Autowired
-    Keycloak keycloak;
+    private Keycloak keycloak;
 
     @Autowired
-    KeycloakProperties keycloakProperties;
+    private KeycloakProperties keycloakProperties;
+
+    @Autowired
+    private UserMapper userMapper;
 
     @Override
     public int count() {
@@ -32,64 +35,21 @@ public class UserServiceImpl implements UserService {
 
     @Override
     public Collection<UserDTO> list(int firstResult, int maxResults, UserDTO filter) {
-        // Prepare query
-        StringBuilder queryBuilder = new StringBuilder();
-        if (filter.getEmail() != null) {
-            queryBuilder.append("email:").append(filter.getEmail()).append(' ');
-        }
-        if (filter.getFirstname() != null) {
-            queryBuilder.append("firstName:").append(filter.getFirstname()).append(' ');
-        }
-        if (filter.getLastname() != null) {
-            queryBuilder.append("lastName:").append(filter.getLastname()).append(' ');
-        }
-        if (filter.getFunction() != null) {
-            queryBuilder.append("function:").append(filter.getFunction()).append(' ');
-        }
-        if (filter.getRole() != null) {
-            queryBuilder.append("role:").append(filter.getRole()).append(' ');
-        }
-        if (filter.getStatut() != null) {
-            queryBuilder.append("statut:").append(filter.getStatut()).append(' ');
-        }
-        if (!queryBuilder.isEmpty()) queryBuilder.deleteCharAt(queryBuilder.length() - 1);
+        String query = buildQuery(filter);
 
         return keycloak.realm(keycloakProperties.getRealm())
                 .users()
-                .searchByAttributes(firstResult, maxResults, true, false,
-                        queryBuilder.toString())
+                .searchByAttributes(firstResult, maxResults, true, false, query)
                 .stream()
-                .map(userRepresentation -> UserDTO.builder()
-                        .id(userRepresentation.getId())
-                        .email(userRepresentation.getEmail())
-                        .firstname(userRepresentation.getFirstName())
-                        .lastname(userRepresentation.getLastName())
-                        .function(
-                                userRepresentation.getAttributes().get("function").get(0))
-                        .role(userRepresentation.getAttributes().get("role").get(0))
-                        .statut(userRepresentation.getAttributes().get("statut").get(0))
-                        .build())
-                .collect(Collectors.toList());
+                .map(userMapper::toUserDTO)
+                .toList();
     }
 
     @Override
     public void create(UserDTO user) {
-        UserRepresentation userRepresentation = new UserRepresentation();
-        userRepresentation.setEmail(user.getEmail());
-        userRepresentation.setFirstName(user.getFirstname());
-        userRepresentation.setLastName(user.getLastname());
-        userRepresentation.setEnabled(true);
-        Map<String, List<String>> attributes =
-                Map.of("function", List.of(user.getFunction()), "role",
-                        List.of(user.getRole()), "statut", List.of(user.getStatut()));
-        userRepresentation.setAttributes(attributes);
-        userRepresentation.setGroups(List.of(user.getRole()));
+        UserRepresentation userRepresentation = userMapper.toUserRepresentation(user);
 
-        CredentialRepresentation credentials = new CredentialRepresentation();
-        credentials.setType(CredentialRepresentation.PASSWORD);
-        credentials.setValue(user.getPassword());
-        credentials.setTemporary(false);
-        userRepresentation.setCredentials(List.of(credentials));
+        setUserPassword(userRepresentation, user.getPassword(), true);
 
         keycloak.realm(keycloakProperties.getRealm()).users().create(userRepresentation);
     }
@@ -101,56 +61,19 @@ public class UserServiceImpl implements UserService {
 
     @Override
     public void update(UserDTO user) throws UserNotFoundException {
-        List<UserRepresentation> users = keycloak.realm(keycloakProperties.getRealm())
-                .users()
-                .search(user.getEmail());
+        UserRepresentation userRepresentation = findUserByEmail(user.getEmail());
 
-        if (users.isEmpty()) {
-            throw new UserNotFoundException("User not found : " + user.getEmail());
-        }
+        if (userRepresentation == null)
+            throw new UserNotFoundException("User not found: " + user.getEmail());
 
-        List<GroupRepresentation> oldGroups =
-                keycloak.realm(keycloakProperties.getRealm())
-                        .users()
-                        .get(users.get(0).getId())
-                        .groups();
+        updateUserRepresentation(user, userRepresentation);
 
-        List<GroupRepresentation> newGroups =
-                keycloak.realm(keycloakProperties.getRealm())
-                        .groups()
-                        .groups()
-                        .stream()
-                        .filter(groupRepresentation -> groupRepresentation.getName()
-                                .equals(user.getRole()))
-                        .toList();
+        List<GroupRepresentation> oldGroups = getUserGroups(userRepresentation.getId());
+        List<GroupRepresentation> newGroups = getGroupByName(user.getRole());
+        updateUserGroups(userRepresentation, oldGroups, newGroups);
 
-        UserRepresentation userRepresentation = users.get(0);
-        userRepresentation.setEmail(user.getEmail());
-        userRepresentation.setFirstName(user.getFirstname());
-        userRepresentation.setLastName(user.getLastname());
-        userRepresentation.setEnabled(true);
-        Map<String, List<String>> attributes =
-                Map.of("function", List.of(user.getFunction()), "role",
-                        List.of(user.getRole()), "statut", List.of(user.getStatut()));
-        userRepresentation.setAttributes(attributes);
-
-        keycloak.realm(keycloakProperties.getRealm())
-                .users()
-                .get(userRepresentation.getId())
-                .leaveGroup(oldGroups.get(0).getId());
-
-        keycloak.realm(keycloakProperties.getRealm())
-                .users()
-                .get(userRepresentation.getId())
-                .joinGroup(newGroups.get(0).getId());
-
-        if (user.getPassword() != null) {
-            CredentialRepresentation credentials = new CredentialRepresentation();
-            credentials.setType(CredentialRepresentation.PASSWORD);
-            credentials.setValue(user.getPassword());
-            credentials.setTemporary(false);
-            userRepresentation.setCredentials(List.of(credentials));
-        }
+        if (user.getPassword() != null)
+            setUserPassword(userRepresentation, user.getPassword(), false);
 
         keycloak.realm(keycloakProperties.getRealm())
                 .users()
@@ -160,29 +83,89 @@ public class UserServiceImpl implements UserService {
 
     @Override
     public UserDTO getUser(String id) {
-        UserRepresentation u = keycloak.realm(keycloakProperties.getRealm())
-                .users()
-                .get(id)
-                .toRepresentation(true);
+        UserRepresentation userRepresentation =
+                keycloak.realm(keycloakProperties.getRealm())
+                        .users()
+                        .get(id)
+                        .toRepresentation(true);
 
-        String group = keycloak.realm(keycloakProperties.getRealm())
+        return userMapper.toUserDTO(userRepresentation);
+    }
+
+    private String buildQuery(UserDTO filter) {
+        StringBuilder queryBuilder = new StringBuilder();
+        if (filter.getEmail() != null)
+            queryBuilder.append("email:").append(filter.getEmail()).append(' ');
+        if (filter.getFirstname() != null)
+            queryBuilder.append("firstName:").append(filter.getFirstname()).append(' ');
+        if (filter.getLastname() != null)
+            queryBuilder.append("lastName:").append(filter.getLastname()).append(' ');
+        if (filter.getFunction() != null)
+            queryBuilder.append("function:").append(filter.getFunction()).append(' ');
+        if (filter.getRole() != null)
+            queryBuilder.append("role:").append(filter.getRole()).append(' ');
+        if (filter.getStatut() != null)
+            queryBuilder.append("statut:").append(filter.getStatut()).append(' ');
+        if (!queryBuilder.isEmpty()) queryBuilder.deleteCharAt(queryBuilder.length() - 1);
+
+        return queryBuilder.toString();
+    }
+
+    private UserRepresentation findUserByEmail(String email) {
+        return keycloak.realm(keycloakProperties.getRealm())
                 .users()
-                .get(id)
-                .groups()
+                .search(email)
                 .stream()
                 .findFirst()
-                .get()
-                .getName();
+                .orElse(null);
+    }
 
-        return UserDTO.builder()
-                .id(u.getId())
-                .email(u.getEmail())
-                .firstname(u.getFirstName())
-                .lastname(u.getLastName())
-                .function(u.getAttributes().get("function").get(0))
-                .role(group)
-                .statut(u.getAttributes().get("statut").get(0))
-                .build();
+    private List<GroupRepresentation> getUserGroups(String userId) {
+        return keycloak.realm(keycloakProperties.getRealm())
+                .users()
+                .get(userId)
+                .groups();
+    }
+
+    private List<GroupRepresentation> getGroupByName(String roleName) {
+        return keycloak.realm(keycloakProperties.getRealm())
+                .groups()
+                .groups()
+                .stream()
+                .filter(group -> group.getName().equals(roleName))
+                .toList();
+    }
+
+    private void updateUserRepresentation(UserDTO user, UserRepresentation userRepresentation) {
+        userRepresentation.setEmail(user.getEmail());
+        userRepresentation.setFirstName(user.getFirstname());
+        userRepresentation.setLastName(user.getLastname());
+        userRepresentation.setEnabled(true);
+        userRepresentation.setAttributes(Map.of(
+                "function", List.of(user.getFunction()),
+                "role", List.of(user.getRole()),
+                "statut", List.of(user.getStatut())
+        ));
+    }
+
+    private void updateUserGroups(UserRepresentation userRepresentation, List<GroupRepresentation> oldGroups, List<GroupRepresentation> newGroups) {
+        keycloak.realm(keycloakProperties.getRealm())
+                .users()
+                .get(userRepresentation.getId())
+                .leaveGroup(oldGroups.get(0).getId());
+
+        keycloak.realm(keycloakProperties.getRealm())
+                .users()
+                .get(userRepresentation.getId())
+                .joinGroup(newGroups.get(0).getId());
+    }
+
+    private void setUserPassword(UserRepresentation userRepresentation,
+                                 String newPassword, Boolean temporary) {
+        CredentialRepresentation credentials = new CredentialRepresentation();
+        credentials.setType(CredentialRepresentation.PASSWORD);
+        credentials.setValue(newPassword);
+        credentials.setTemporary(false);
+        userRepresentation.setCredentials(List.of(credentials));
     }
 }
-
